# promptcast

./: .cnb.yml  .gitignore  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  update.example.json  update.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  warm-cache.yml
app/: bootstrap.py  config.py  controller.py  logging_setup.py  main.py  tray.py
app/db/: connection.py  migrations.py
app/db/repositories/: folders.py  prompts.py  settings.py  sites.py  tags.py
app/models/: __init__.py  entities.py
app/platform/: __init__.py  base.py  macos.py  windows.py
app/services/: autostart.py  favicon.py  hotkey.py  importer.py  inject.py  search.py  theme.py
app/ui/styles/: base.qss  tokens.py
app/ui/widgets/: data_panel.py  drawer_header.py  empty_state.py  filter_chips.py  folders_panel.py  hint_bar.py  hotkey_recorder.py  markdown_view.py  prompt_list.py  search_bar.py  site_launcher.py  sites_panel.py  toast.py
app/ui/windows/: drawer.py  editor.py  preview.py  settings.py
docs/: PLAN.md  PYTHON_REWRITE_PLAN.md  PYTHON_REWRITE_TODO.md  TODO.md
prototype/: app.pen
scripts/: check-ipc-contract.mjs
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
server/prisma/: schema.prisma
server/prisma/migrations/20260617144633_init/: migration.sql
server/prisma/migrations/20260618002841_password_reset/: migration.sql
server/prisma/migrations/20260618005632_server_seen_at/: migration.sql
server/src/: app.module.ts  main.ts
server/src/auth/: auth.controller.ts  auth.service.ts  current-user.decorator.ts  jwt.strategy.ts
server/src/auth/dto/: account.dto.ts  refresh.dto.ts
server/src/prisma/: prisma.service.ts
server/src/sync/: gc.service.ts  sync.controller.ts  sync.module.ts  sync.service.ts
server/src/sync/dto/: pull.dto.ts  push.dto.ts
server/test/: sync.e2e-spec.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  logging.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  data.rs  folders.rs  inject.rs  mod.rs  ping.rs  prompts.rs  settings.rs  sites.rs  sync.rs  tags.rs  update.rs  window.rs
src-tauri/src/db/: clipboard.rs  folders.rs  migrations.rs  mod.rs  prompts.rs  schema.rs  settings.rs  sites.rs  sync_repo.rs  sync_state.rs  tags.rs
src-tauri/src/models/: folder.rs  mod.rs  prompt.rs  settings.rs  site.rs  sync.rs  tag.rs
src-tauri/src/platform/: macos.rs  mod.rs  permissions.rs  windows.rs
src-tauri/src/sync/: client.rs  engine.rs  mod.rs
src-tauri/src/update/: mod.rs
src/api/: auth.ts  clipboard.ts  data.ts  folders.ts  index.ts  inject.ts  prompts.ts  settings.ts  sites.ts  sync.ts  tags.ts  update.ts  window.ts
src/components/: UpdateModal.vue
src/components/drawer/: ClipboardList.vue  FilterChips.vue  HintBar.vue  PromptList.vue  PromptListItem.vue  SearchBar.vue  SiteLauncher.vue
src/components/preview/: MarkdownView.vue
src/components/settings/: DataPanel.vue  FoldersPanel.vue  HotkeyRecorder.vue  SitesPanel.vue
src/components/ui/: BaseToast.vue
src/composables/: useAppEvents.ts  useFuzzySearch.test.ts  useFuzzySearch.ts  useTheme.ts
src/stores/: auth.ts  clipboard.ts  folders.ts  prompts.ts  settings.ts  sites.ts  sync.ts  tags.ts  ui.ts  update.ts
src/styles/: global.css  reset.css  theme-dark.css  theme-light.css  tokens.css
src/types/: clipboard.ts  folder.ts  prompt.ts  settings.ts  site.ts  sync.ts  tag.ts  update.ts
src/utils/: debounce.ts  dialog.ts  format.test.ts  format.ts  logger.ts  markdown.ts
src/views/: DrawerView.vue  EditorView.vue  PreviewView.vue  SettingsView.vue
tests/: test_repositories.py  test_search.py
