[package]
name = "prompt-manager"
version = "0.1.0"
description = "Prompt Hub — cross-platform prompt manager with global hotkey injection."
authors = ["xiao"]
edition = "2021"

[lib]
# 与生成时一致：避免 Windows 上 lib/bin 同名冲突
name = "prompt_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
