[package]
name = "prompt-manager"
version = "0.1.0"
description = "Prompt Hub — cross-platform prompt manager with global hotkey injection."
authors = ["xiao"]
edition = "2021"

[lib]
# 与生成时一致：避免 Windows 上 lib/bin 同名冲突
name = "prompt_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
arboard = "3"
enigo = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.20"
url = "2"
base64 = "0.22"
