[package]
name = "prompt-manager"
version = "0.0.5"
description = "Prompt Hub — cross-platform prompt manager with global hotkey injection."
authors = ["xiao"]
edition = "2021"

[lib]
# 与生成时一致：避免 Windows 上 lib/bin 同名冲突
name = "prompt_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
arboard = "3"
enigo = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
scraper = "0.20"
url = "2"
base64 = "0.22"
sha2 = "0.10"
semver = "1"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSPanel", "NSResponder"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_DataExchange"] }
